add color and font changes.

--- a/styles/stephenhu.css
+++ b/styles/stephenhu.css
@@ -4,5 +4,8 @@ html {
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
+  font-family: arial;
+  color: #ffffff;
 }
+
 
