--- a/styles/stephenhu.css
+++ b/styles/stephenhu.css
@@ -5,7 +5,69 @@ html {
   -o-background-size: cover;
   background-size: cover;
   font-family: arial;
+}
+
+body {
+  background-color: transparent;
+}
+
+a {
+  text-decoration: none;
   color: #ffffff;
 }
 
+a:hover {
+  text-decoration: none;
+  color: #005994;
+  text-outline: none;
+}
 
+a:visited {
+  text-decoration: none;
+}
+
+a:link {
+  text-decoration: none;
+}
+
+.overlay {
+  display: block;
+  width: auto; 
+  color: #ffffff;
+  background: #1b1b1b;
+  opacity: .6;
+  filter:alpha(opacity=60);
+  padding: 5px;
+  border-radius: 3px;
+}
+
+.text {
+  font-size: 5em;  
+}
+
+/* bootstrap overrides */
+
+.navbar-inner {
+  background-color: #005994;
+  opacity: .6;
+  filter:alpha(opacity=60);
+  background-image: -webkit-gradient(top, #005994, #005994);
+  background-image: -webkit-linear-gradient(top, #005994, #005994);
+  color: #ffffff;
+  background-repeat: repeat-x;
+  border: none;
+}
+
+.navbar-fixed-bottom .brand {
+  color: #ffffff;
+  margin-left: 5px;
+}
+
+.navbar .nav > li > a {
+  color: #ffffff;
+}
+
+.navbar .nav > li > a:hover {
+  text-shadow: none;
+  color: #ff1a1a;
+}
