--- a/src/col12.haml
+++ b/src/col12.haml
@@ -6,5 +6,5 @@
       %a{:href => "#{contents[0][:link]}"}
         %h4{:class => "green"}= contents[0][:title]
       %date= contents[0][:created_at]
-      %p= contents[0][:summary]
+      = contents[0][:summary]
 
