--- a/src/col3.haml
+++ b/src/col3.haml
@@ -7,5 +7,5 @@
         %a{:href => "#{c[:link]}"}
           %h4{:class => "green"}= c[:title]
         %date= c[:created_at]
-        %p= c[:summary]
+        = c[:summary]
 
