--- a/src/layout.haml
+++ b/src/layout.haml
@@ -2,7 +2,7 @@
 %html{:lang => "en"}
   %head
     %title stephenhu.info
-    %link{:rel => "stylesheet", :href => "bootstrap/css/boostrap.min.css"}
+    %link{:rel => "stylesheet", :href => "//netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css"}
     %link{:rel => "stylesheet", :href => "css/stephenhu.css"}
   %body
   
