--- a/src/col8b.haml
+++ b/src/col8b.haml
@@ -6,7 +6,7 @@
       %a{:href => "#{contents[0][:link]}"}
         %h4{:class => "green"}= contents[0][:title]
       %date= contents[0][:created_at]
-      %p= contents[0][:summary]
+      = contents[0][:summary]
   %div{:class => "col-lg-8 box"}
     - if contents[1][:picture]
       %img{:src => "#{contents[1][:link]}"}
@@ -14,5 +14,5 @@
       %a{:href => "#{contents[1][:link]}"}
         %h4{:class => "green"}= contents[1][:title]
       %date= contents[1][:created_at]
-      %p= contents[1][:summary]
+      = contents[1][:summary]
 
