--- a/src/navbar.haml
+++ b/src/navbar.haml
@@ -1,6 +1,6 @@
 %div.navbar.navbar-static-top
   %div.navbar-header
-    %a.navbar-brand{:href => ""}
+    %a.navbar-brand{:href => "index.html"}
       %div.logo
         STEPHEN
         %span.off-logo HU
