remove space in stephenhu title

--- a/src/navbar.haml
+++ b/src/navbar.haml
@@ -2,7 +2,5 @@
   %div.navbar-header
     %a.navbar-brand{:href => "index.html"}
       %div.logo
-        STEPHEN
-        %span.off-logo HU
-        \- INNOVATION, DESIGN, GENERALE
+        STEPHEN<span class="off-logo">HU</span> - INNOVATION, DESIGN, GENERALE
 
