--- a/src/layout.haml
+++ b/src/layout.haml
@@ -3,7 +3,7 @@
   %head
     %title stephenhu.info
     %link{:rel => "stylesheet", :href => "//netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css"}
-    %link{:rel => "stylesheet", :href => "css/stephenhu.css"}
+    %link{:rel => "stylesheet", :href => "css/stephenhu2.css"}
   :javascript
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
     (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -15,11 +15,32 @@
 
   %body
   
-    = haml :navbar
+    %div{:class => "green m box"}
+      %a{:href => "index.html"}
+        %h2 STEPHENHU
+      %h4 INNOVATION, CREATIVITY, UNIQUENESS
+      %h5 copyright &copy; 2014
+      %a{:href => "https://github.com/stephenhu"}
+        %img{:src => "images/glyphicons_social_21_github.png"}
+      %a{:href => "https://cn.linkedin.com/in/hustephen"}
+        %img{:src => "images/glyphicons_social_17_linked_in.png"}
+      %a{:href => "mailto:epynonymous@outlook.com"}
+        %img{:src => "images/glyphicons_social_39_e-mail.png"}
+      %a{:href => "http://flickr.com/photos/blueconfusion"}
+        %img{:src => "images/glyphicons_social_35_flickr.png"}
+      %br
+      %br
+      %br
+      %a{:href => "", :class => "gauge"}
+        %div{:class => "value"}
+          23
+        %div{:class => "key"}
+          POSTS
+      %a{:href => "", :class => "gauge"}
+        %div{:class => "value"}
+          301
+        %div{:class => "key"}
+          PHOTOS
 
-    %div.container    
-      = yield
+    = yield
     
-    %div.navbar.navbar-static-bottom
-      %p.torquise Stephen Hu &copy; Copyright 2014
-
