--- a/src/layout.haml
+++ b/src/layout.haml
@@ -18,7 +18,7 @@
     %div{:class => "green m box"}
       %a{:href => "index.html"}
         %h2 STEPHENHU
-      %h4 INNOVATION, CREATIVITY, UNIQUENESS
+      %h4 Innovation, Creativity, Uniqueness
       %h5 copyright &copy; 2014
       %a{:href => "https://github.com/stephenhu"}
         %img{:src => "images/glyphicons_social_21_github.png"}
@@ -28,7 +28,6 @@
         %img{:src => "images/glyphicons_social_39_e-mail.png"}
       %a{:href => "http://flickr.com/photos/blueconfusion"}
         %img{:src => "images/glyphicons_social_35_flickr.png"}
-      %br
       %br
       %br
       %a{:href => "", :class => "gauge"}
@@ -43,4 +42,4 @@
           PHOTOS
 
     = yield
-    
+
