--- a/src/layout.haml
+++ b/src/layout.haml
@@ -19,7 +19,7 @@
       %a{:href => "index.html"}
         %h2 STEPHENHU
       %h4 Innovation, Creativity, Uniqueness
-      %h5 copyright &copy; 2014
+      %h5 Copyright &copy; 2014
       %a{:href => "https://github.com/stephenhu"}
         %img{:src => "images/glyphicons_social_21_github.png"}
       %a{:href => "https://cn.linkedin.com/in/hustephen"}
