--- a/src/layout.haml
+++ b/src/layout.haml
@@ -32,12 +32,12 @@
       %br
       %a{:href => "", :class => "gauge"}
         %div{:class => "value"}
-          23
+          = stats[:posts]
         %div{:class => "key"}
           POSTS
       %a{:href => "", :class => "gauge"}
         %div{:class => "value"}
-          301
+          = stats[:pictures]
         %div{:class => "key"}
           PHOTOS
 
