--- a/css/stephenhu2.css
+++ b/css/stephenhu2.css
@@ -74,7 +74,7 @@ a:hover {
 
 .xl {
   height: auto;
-  width: auto;
+  width: 100%;
   overflow: visible;
 }
 
@@ -122,7 +122,7 @@ a:hover {
 }
 
 .blue a:hover {
-  color: #ffff00;
+  color: #0096fa;
   font-weight: 500;
 }
 
