--- a/css/stephenhu2.css
+++ b/css/stephenhu2.css
@@ -6,6 +6,7 @@ html {
 body {
   background-image: url("../images/photo.jpg");
   -webkit-background-size: cover;
+  -moz-background-size: cover;
   background-repeat: no-repeat;
   color: #ffffff;
   height: 100%;
@@ -101,6 +102,7 @@ a:hover {
 .green {
   color: #ffffff;
   background: -webkit-linear-gradient( top, #008822, #00c700 );
+  background: -moz-linear-gradient( top, #008822, #00c700 );
 }
 
 .green a {
@@ -115,6 +117,7 @@ a:hover {
 .blue {
   color: #ffffff;
   background: -webkit-linear-gradient( top, #005994, #007dd1 );
+  background: -moz-linear-gradient( top, #005994, #007dd1 );
 }
 
 .blue a {
